add:authenticate endpoints
