# api/swagger.yaml
@@ -1,4 +1,27 @@
 basePath: /api/v1
+definitions:
+  github_com_arshamroshannejad_squidshop-backend_internal_entity.UserAuthRequest:
+    properties:
+      phone:
+        example: "+989029266635"
+        maxLength: 13
+        minLength: 1
+        type: string
+    required:
+    - phone
+    type: object
+  github_com_arshamroshannejad_squidshop-backend_internal_entity.UserVerifyAuthRequest:
+    properties:
+      code:
+        example: "123456"
+        type: string
+      phone:
+        example: "+989029266635"
+        type: string
+    required:
+    - code
+    - phone
+    type: object
 host: api.squidshop.ir
 info:
   contact:
@@ -12,7 +35,56 @@ info:
   termsOfService: http://swagger.io/terms/
   title: squidshop-backend
   version: 0.1.0
-paths: {}
+paths:
+  /auth:
+    post:
+      consumes:
+      - application/json
+      description: if user exists it will log in else register. it also sends otp
+        code to user phone
+      parameters:
+      - description: phone for register or login
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_arshamroshannejad_squidshop-backend_internal_entity.UserAuthRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: auth handler (register | login)
+      tags:
+      - auth
+  /auth/verify:
+    post:
+      consumes:
+      - application/json
+      description: verify otp code and return access token
+      parameters:
+      - description: phone and code for register or login
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_arshamroshannejad_squidshop-backend_internal_entity.UserVerifyAuthRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: verify auth handler
+      tags:
+      - auth
 securityDefinitions:
   BearerAuth:
     in: header
